--- a/package.json
+++ b/package.json
@@ -78,9 +78,9 @@
 		"webpack-cli": "^3.1.1",
 		"webpack-dev-server": "^3.1.9"
 	},
-	"peerDependencies": {
-		"react": "^15.3.0 || ^16.0.0",
-		"react-dom": "^15.3.0 || ^16.0.0"
+        "peerDependencies": {
+		"react": "^15.3.0 || ^16.0.0 || ^17.0.0",
+		"react-dom": "^15.3.0 || ^16.0.0 || ^17.0.0"
 	},
 	"engines": {
 		"node": ">= 8"
